Bug 492298 - Toggling the "Show Menubar" checkbox, then closing and then reopening Dolphin, results in the menubar's visibility reverting and no longer matching the checkbox state
Summary: Toggling the "Show Menubar" checkbox, then closing and then reopening Dolphin...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.0
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 444635 503254 504806 507077 507141 508018 512077 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-28 05:39 UTC by amshstha37
Modified: 2026-04-03 15:12 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
In the version 24.08.0, if I uncheck the show menubar, close dolphin file manager and then reopen it, it shows menubar and when I go to settings, the show menubar checkbox remains unchecked. (13.37 KB, image/png)
2024-08-28 05:39 UTC, amshstha37
Details

Note You need to log in before you can comment on or make changes to this bug.
Description amshstha37 2024-08-28 05:39:06 UTC
Created attachment 173020 [details]
In the version 24.08.0, if I uncheck the show menubar, close dolphin file manager and then reopen it, it shows menubar and when I go to settings, the show menubar checkbox remains unchecked.

In the version 24.08.0, if I uncheck the show menubar, close dolphin file manager and then reopen it, it shows menubar and when I go to settings, the show menubar checkbox remains unchecked.
Comment 1 tuxott 2024-09-03 19:04:51 UTC
(In reply to amshstha37 from comment #0)
> Created attachment 173020 [details]
> In the version 24.08.0, if I uncheck the show menubar, close dolphin file
> manager and then reopen it, it shows menubar and when I go to settings, the
> show menubar checkbox remains unchecked.
> 
> In the version 24.08.0, if I uncheck the show menubar, close dolphin file
> manager and then reopen it, it shows menubar and when I go to settings, the
> show menubar checkbox remains unchecked.

I tested this myself on Arch Linux, using Dolphin 24.08.0 as well, and observed the same behavior.

I launched my development virtual machine and built Dolphin on the latest source code, Dolphin 24.11.70, and observed that this behavior has been patched.

We'll have just have to wait for the patch to be packaged in our respective distributions.
Comment 2 John Kizer 2025-04-24 18:29:53 UTC
Hi - just to check with the original reporter here, are you still able to reproduce this issue with Dolphin 25.04.0?

Thanks!
Comment 3 amshstha37 2025-04-25 02:16:17 UTC
(In reply to John Kizer from comment #2)
> Hi - just to check with the original reporter here, are you still able to
> reproduce this issue with Dolphin 25.04.0?
> 
> Thanks!

The bug still persist there.
Comment 4 amshstha37 2025-04-25 02:18:38 UTC
(In reply to amshstha37 from comment #3)
> (In reply to John Kizer from comment #2)
> > Hi - just to check with the original reporter here, are you still able to
> > reproduce this issue with Dolphin 25.04.0?
> > 
> > Thanks!
> 
> The bug still persist there. 
However, I am not being able to upload a image.
Comment 5 John Kizer 2025-04-25 04:16:42 UTC
*** Bug 503254 has been marked as a duplicate of this bug. ***
Comment 6 John Kizer 2025-04-25 04:38:58 UTC
Thanks - I can personally reproduce this on my Fedora KDE 42 device using the steps from https://bugs.kde.org/show_bug.cgi?id=503254#c0 - however, I can't reproduce this on a new user account on my Fedora KDE 42 device, and I can't reproduce this on a KDE Neon VM.

I'll need to defer to folks with more knowledge to figure out where to go from here, sorry!

Notes from my attempts to look into this: Maybe some past bug workarounds might no longer be working consistently?

* https://invent.kde.org/system/dolphin/-/blob/v25.04.0/src/dolphinmainwindow.cpp?ref_type=tags#L225 seems to be where the "Show Menubar" checkbox state is initialized, and references https://bugs.kde.org/show_bug.cgi?id=171080

* https://invent.kde.org/system/dolphin/-/blob/v25.04.0/src/dolphinmainwindow.cpp?ref_type=tags#L2127 seems to be where the toggling action is called, and references https://bugs.kde.org/show_bug.cgi?id=286822
Comment 7 bragrseg 2025-07-21 10:43:05 UTC
*** Bug 507077 has been marked as a duplicate of this bug. ***
Comment 8 bragrseg 2025-07-21 10:52:48 UTC
Looking into the dolphinrc file it matches whatever state dolphin is in. When the application is restarted and the state is forcibly changed to show menu bar the dolphinrc file will change to match that state but the checkmark matches the state dolphinrc was in when dolphin was launched.
Comment 9 aristsakas 2025-12-27 23:40:35 UTC
*** Bug 508018 has been marked as a duplicate of this bug. ***
Comment 10 aristsakas 2025-12-27 23:41:00 UTC
*** Bug 444635 has been marked as a duplicate of this bug. ***
Comment 11 aristsakas 2025-12-27 23:41:13 UTC
*** Bug 512077 has been marked as a duplicate of this bug. ***
Comment 12 aristsakas 2026-01-19 14:54:13 UTC
*** Bug 504806 has been marked as a duplicate of this bug. ***
Comment 13 aristsakas 2026-02-17 11:13:42 UTC
*** Bug 507141 has been marked as a duplicate of this bug. ***
Comment 14 Bug Janitor Service 2026-03-26 15:13:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1232
Comment 15 Méven 2026-04-03 15:12:34 UTC
Git commit c3ef613f29dd256e1b6065f1c744241b6f69788a by Méven Car, on behalf of Oleksandr Bondar.
Committed on 03/04/2026 at 10:42.
Pushed by meven into branch 'master'.

dolphinmainwindow: use directly ShowMenubar action
to change menuBar visibility

The menubar check was defined by menubar isHidden var. The logic has
been reverted. The toggleShowMenuBar func was simply inverting the
isVisible var. Now it's being set the menubar isChecked value.
This led to testedObjectsSizeAfterTraversingForwards=10 instead of 11
(apparently there was a phantom object), so adjust the comparation
in dolphinmainwindowtest.

M  +3    -4    src/dolphinmainwindow.cpp
M  +1    -1    src/tests/dolphinmainwindowtest.cpp

https://invent.kde.org/system/dolphin/-/commit/c3ef613f29dd256e1b6065f1c744241b6f69788a